design: edit small css issues with white space

--- a/src/Resources/styles/front/common/components/list/menu.less
+++ b/src/Resources/styles/front/common/components/list/menu.less
@@ -232,6 +232,10 @@
 
             &:last-child {
                 margin-bottom: 0;
+                
+                @media @query-vl {
+                    margin-bottom: 38px;
+                }
             }
 
             .list-menu__submenu--children & {
